[package]
name = "loupe"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"

[dependencies]
memmap = "0.7.0"
nix = "0.15.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev = "a12092d1c6f901e3ec29cb1c10aaa3775c4228dc" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
uuid = { version = "0.8.1", features = ["v4"] }
