[package]
name = "loupe"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
memmap = "0.7.0"
nix = "0.15.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev = "394238ff9468928494e91aaf78196124013c70b6" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
unicode-segmentation = "1.3.0"
uuid = { version = "0.8.1", features = ["v4"] }
