[package]
name = "loupe"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"

[dependencies]
itertools = "0.8.1"
memmap = "0.7.0"
nix = "0.15.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev = "2096f040922609d6d7c6856caf2b79f15e51fb5d" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
unicode-segmentation = "1.4.0"
uuid = { version = "0.8.1", features = ["v4"] }
