[package]
name = "loupe"
version = "1.0.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
itertools = "0.8.1"
lazy_static = "1.4.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev = "473b1671c75153502e980808d66cdeb3da7b7f73" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
unicode-segmentation = "1.6.0"
unidecode = "0.3.0"
uuid = { version = "0.8.1", features = ["v4"] }
