[package]
name = "loupe"
version = "1.0.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
itertools = "0.8.1"
lazy_static = "1.4.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
unicode-segmentation = "1.6.0"
unidecode = "0.3.0"
uuid = { version = "0.8.1", features = ["v4"] }
tokio = "0.2.0-alpha.6"
warp = { git = "https://github.com/seanmonstar/warp.git", rev = "9bb58102b7e7c989b037c8ccc9e3c332efdd2579" }
